# torito-backend

./: .gitignore  README.md  config.toml  pyproject.toml
.github/workflows/: bulid.yml
src/torito_prototype/: __init__.py  main.py  torrc.example
src/torito_prototype/entity/: __init__.py  bridgeConfig.py  config.py  proxyConfig.py
src/torito_prototype/repository/: __init__.py  torControlRepository.py  torrcRepository.py
src/torito_prototype/usecase/: handle.py
