[project]
name = "torito-prototype"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "calloc134", email = "115209243+calloc134@users.noreply.github.com" }
]
dependencies = [
    "stem>=1.8.2",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "nest-asyncio>=1.6.0",
    "dbus-python>=1.3.2",
    "returns>=0.23.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/torito_prototype"]
